2010-04-21  James Youngman  <jay@gnu.org>

	Move rl-merge.cc into libcssc.a
	* Makefile.am (libcssc_a_SOURCES): Move rl-merge.cc into the library.
	(get_SOURCES): Remove rl-merge.cc.
	(admin_SOURCES): Likewise.
	* rel_list.h: Remove some unnecessary blank lines.

2010-04-20  James Youngman  <jay@gnu.org>

	Add a unit test.
	* unit-tests/test_mylist.cc: New file; unit test for mylist<T>.
	* unit-tests/Makefile.am: New file.
	* configure.ac: Call AC_LIBTOOL.  Include
	googletest/m4/acx_pthread.m4.  Add --with-pthreads so that our
	main build and googletest libraries are compatible.  Add
	unit-tests/Makefile to AC_CONFIG_FILES.
	* autogen.sh: Run libtoolize in the top level and the googletest
	directories.
	* Makefile.am (SUBDIRS): Add unit-tests.

	Include <errno.h> unconditionally where we need it.
	* admin.cc: Include <errno.h> instead of "err_no.h".
	* pfile.cc: Likewise.
	* cssc.h: Likewise.
	* file.cc: Likewise.
	* get.cc: Likewise.
	* run.cc: Likewise.
	* quit.cc: Likewise.
	* sccsfile.cc: Likewise.
	* sf-delta.cc: Likewise.
	* what.cc: Likewise.
	* err_no.h: Remove useless file.
	* Makefile.am (noinst_HEADERS): Remove err_no.h.

	Instead of linking all objects explicitly, use a library.
	* Makefile.am (noinst_LIBRARIES): Build new library libcssc.a.
	(libcssc_a_SOURCES): list the source files for the library.
	(common_sources): Remove unused variable.
	(sname_srcs): Likewise.
	(sfile_srcs): Likewise.
	(mod_srcs): Likewise.
	(moddelta_srcs): Likewise.
	(newdelta_srcs): Likewise.
	(get_LDADD): Add the new library libcssc.a.
	(delta_LDADD): Likewise.
	(admin_LDADD): Likewise.
	(prs_LDADD): Likewise.
	(what_LDADD): Likewise.
	(unget_LDADD): Likewise.
	(sact_LDADD): Likewise.
	(cdc_LDADD): Likewise.
	(rmdel_LDADD): Likewise.
	(prt_LDADD): Likewise.
	(val_LDADD): Likewise.
	(what_SOURCES): Remove object files which are now in libcssc.a.
	(sact_SOURCES): Likewise.
	(unget_SOURCES): Likewise.
	(prt_SOURCES): Likewise.
	(prs_SOURCES): Likewise.