@@ -8,6 +8,10 @@
 
 2010-04-20  James Youngman  <jay@gnu.org>
 
+	New unit test for myset<T>.
+	* unit-tests/Makefile.am (check_PROGRAMS): Add test_myset.
+	* unit-tests/test_myset.cc: New unit test.
+
 	Add a unit test.
 	* unit-tests/test_mylist.cc: New file; unit test for mylist<T>.
 	* unit-tests/Makefile.am: New file.
